syntax = "proto3";
option go_package = "github.com/samsapti/sec1-handin-02/grpc";

service DiceGame {
    rpc SendCommitment (Commitment) returns (Empty) {}
    rpc SendCommitmentKey (CommitmentKey) returns (Empty) {}
    rpc SendDieThrow (DieThrow) returns (Empty) {}
}

message Commitment {
    uint64 c = 1;
}

message CommitmentKey {
    uint64 m = 1;
    uint64 r = 2;
}

message DieThrow {
    uint64 val = 1;
}

message Empty {}